fix(editor): scrolling on ios

--- a/src/components/account/editor/editor.scss
+++ b/src/components/account/editor/editor.scss
@@ -54,6 +54,7 @@
   font-size: var(--text-font-size-medium);
   outline: none;
   resize: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 .toolbar {
